# tulip-plugin-gomory-hu-tree

./: CMakeLists.txt  GomoryHu.cpp  README.md
